syntax = "proto3";

option csharp_namespace = "GrpcServer";

package message;

service Message {
  // Unary Method
  rpc UnaryCall (MessageRequest) returns (MessageResponse);

  // Server Streaming Method
  rpc StreamingFromServer (MessageRequest) returns (stream MessageResponse);
}

message MessageRequest {
  string name = 1;
  string message = 2;
}

message MessageResponse {
  string message = 1;
}
